2009-03-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpLibrary.cmake: include yarp/os/impl, yarp/sig/impl,
	yarp/dev/impl header files in INSTALL target.  Thanks to
	Gianluca for pointing out this was not happening.

2009-03-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpOptions.cmake: add an option to replace ACE-based
	implementation of yarp::os::impl::String with a std::string
	typedef. This is useful for some debugging I'm doing, and is
	an option we had often talked about adding in the past.

2009-03-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: check for minimum swig version;
	patch from Alexis Maldonado.

	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: make
	semaphore failures more visible.

2009-02-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/SemaphoreTest.cpp: add a basic test
	for semaphore functionality.  Seem to be having difficulties
	with the ACE version packaged on Ubuntu 8.10.

2009-02-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: Fix based on patch submitted
	by dantard for YARP Bug 2526259: "Locale settings influence YARP
	behavior".  Serialization of decimal point in string versions
	of Bottle format didn't work right when the local decimal point
	was not a "."

2009-02-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/Drivers.cpp: D'oh! ACE String::strstr
	function now returns unsigned ints, so a filter for an unwanted
	option was always returning true.  "yarpdev --device foo --verbose"
	now works again.  Thanks to Frank Forster for reporting this
	problem.

	* src/libYARP_dev/harness/PolyDriverTest.cpp: regression test
	for drivers reporting options ("yarpdev --device foo --verbose" is
	currently not reporting options correctly).

2009-02-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/NetType.cpp: improve text-mode continuation
	across line breaks.
