@@ -1,5 +1,8 @@
 2009-03-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/include/yarp/os/impl/SemaphoreImpl.h: bypass
+	ACE semaphores in Linux.
+
 	* conf/YarpLibrary.cmake: include yarp/os/impl, yarp/sig/impl,
 	yarp/dev/impl header files in INSTALL target.  Thanks to
 	Gianluca for pointing out this was not happening.
